--- a/index.html
+++ b/index.html
@@ -2,33 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ad Banner Integration</title>
+  <meta name="viewport" content="width=468, initial-scale=1">
+  <title></title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
+    html, body {
       margin: 0;
-      padding: 20px;
-      text-align: center;
+      padding: 0;
+      background: transparent;
+      overflow: hidden;
     }
 
     #ad-container {
-      margin: 20px auto;
       width: 468px;
       height: 60px;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
 <body>
 
-  <h2>Welcome to Our Page</h2>
-
   <div id="ad-container">
-    <!-- Ad will load here -->
     <script type="text/javascript">
       atOptions = {
         'key' : 'f3e78fa8659dc937188fa04ffb6edc4e',
